--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima # jekyll-theme-slate
+theme: jekyll-theme-slate
 # title: welcome to shubham's homepage
 author:
   name: Shubham Shinde
